Docker and configuration improvements.

--- a/phylobook/templates/registration/login.html
+++ b/phylobook/templates/registration/login.html
@@ -10,7 +10,7 @@
           <div class="card-body">
             <h4 class="card-title titlefont">Log in to your account</h4>
             {% if settings.LOGIN_TYPE == "dual" %}
-              <a href="/saml/saml_login?next=/projects">{{ settings.LOGIN_SSO_TITLE }}</a>
+              <a href="/saml/login?next=/projects">{{ settings.LOGIN_SSO_TITLE }}</a>
               <br/><br/>
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;or &nbsp;
               <br/><br/>
