--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -27,7 +27,7 @@
             return rgb;
         }
 
-        function showCluster(project, file, id) {
+        function showCluster(project, file, id, drawboxes) {
             $.ajax({
                 type: "GET",
                 headers: { "X-CSRFToken": token },
@@ -51,7 +51,9 @@
                     for (let i = 0; i < clusterArray.length; i++) {
                         var key = clusterArray[i][1];
                         //if (key > max) max = key;
-                        var color = getClassficationColor(clusterColorKeys[key]);
+                        var classificationColor = getClassficationColor(clusterColorKeys[key]);
+                        var color = classificationColor["color"];
+                        var colorText = "box" + classificationColor["name"];
                         if (color != "key not found") {
                             var label = d3.select(svg).selectAll("text")
                                   .filter(function(){
@@ -76,6 +78,51 @@
                                 .style('fill', color)
                                 .style("stroke", color);
 
+                            if (drawboxes) {
+                                var offset = 2; // enlarge rect box 2 px on left & right side
+                                var labelText = label.text();
+                                var selectedText = label;
+
+                                var existingColoredBox = d3.select("#" + labelText);
+
+                                // set the class of currentSelectedText to be colorText
+                                selectedText.attr("class", colorText);
+
+                                var color = getColor(colorText.replace("box", ""));
+
+                                // if there is a transform, grab the x, y
+                                if (selectedText.attr("transform") != null) {
+                                    rect.x = selectedText.node().transform.baseVal[0].matrix.e - 1;
+                                    rect.y = selectedText.node().transform.baseVal[0].matrix.f + 2;
+                                }
+
+                                pathinfo = [
+                                    {x: rect.x-offset, y: rect.y },
+                                    {x: rect.x+offset + rect.width, y: rect.y},
+                                    {x: rect.x+offset + rect.width, y: rect.y + rect.height - 1 },
+                                    {x: rect.x-offset, y: rect.y + rect.height - 1 },
+                                    {x: rect.x-offset, y: rect.y },
+                                ];
+
+                                if (existingColoredBox.node()) {
+                                    existingColoredBox.style("stroke", color);
+                                } else {
+                                    // Specify the function for generating path data
+                                    var d3line = d3.line()
+                                        .x(function(d){return d.x;})
+                                        .y(function(d){return d.y;})
+                                        .curve(d3.curveLinear);
+
+                                    // Draw the line
+                                    svgcanvas.append("path")
+                                        .attr("id", labelText)
+                                        .attr("d", d3line(pathinfo))
+                                        .style("stroke-width", 1)
+                                        .style("stroke", color)
+                                        .style("fill", "none");
+                                }
+                            }
+
                         } else {
                             alert(`Not color found for classification #(line ${i}): ${clusterArray[i][1]}`);
                         }
@@ -91,15 +138,36 @@
         function buildClusterLegend(uniqueClusters, clusterColorKeys) {
             var div = "";
             for (let cluster = 0; cluster < uniqueClusters.length; cluster++) {
-                div = div + "<span style='white-space: nowrap;'>" + uniqueClusters[cluster] + "</span>" + "<div class='triangle' + style='border-bottom: 12px solid " + getClassficationColor(clusterColorKeys[uniqueClusters[cluster]]) + " !important;'></div>&nbsp;&nbsp;";
+                div = div + "<span style='white-space: nowrap;'>" + uniqueClusters[cluster] + "</span>" + "<div class='triangle' + style='border-bottom: 12px solid " + getClassficationColor(clusterColorKeys[uniqueClusters[cluster]])["color"] + " !important;'></div>&nbsp;&nbsp;";
             }
             return div;
         }
 
         function getClassficationColor(key) {
             // https://stackoverflow.com/questions/10014271/generate-random-color-distinguishable-to-humans#answer-20129594
-            const goldenAngle = 180 * (3 - Math.sqrt(5));
-            return `hsl(${key * goldenAngle + 60}, 100%, 75%)`
+            //const goldenAngle = 180 * (3 - Math.sqrt(5));
+            //return `hsl(${key * goldenAngle + 60}, 100%, 75%)`
+            if (key == "1") {
+                return {"name": "yellow", "color": "#efe645"};
+            } else if (key == "2") {
+                return {"name": "red", "color": "red"};
+            } else if (key == "3") {
+                return {"name": "neonblue", "color": "#537eff"};
+            } else if (key == "4") {
+                return {"name": "green", "color": "#00cb85"};
+            } else if (key == "5") {
+                return {"name": "orange", "color": "orange"};
+            } else if (key == "6") {
+                return {"name": "pink", "color": "#e935a1"};
+            } else if (key == "7") {
+                return {"name": "lightblue", "color": "#00e3ff"};
+            } else if (key == "8") {
+                return {"name": "black", "color": "black"};
+            } else if (key == "9") {
+                return {"name": "gray", "color": "gray"};
+            } else if (key == "10") {
+                return {"name": "purple", "color": "purple"};
+            }
         }
 
         // add listener for cluster select
@@ -118,6 +186,27 @@
                 if (text != "None") {
                     var project = "{{ project }}";
                     showCluster(project, this.value, id);
+                }
+            });
+            $('.addclusterboxes').on('click', function() {
+                var clusterid = $(this).attr("id").replace("clusterbtn", "cluster");
+                var id = clusterid.replace("cluster-", "");
+                var text = $("#" + clusterid + " option:selected").val();
+                if (text == "None") {
+                    alert("No cluster file selected.  Only manual color label box function is allowed when 'None' is selected.");
+                    return;
+                }
+                if (confirm("This will overwrite any existing label color boxes!  Proceed?")) {
+                    var svg = $("#" + id).find("svg")[0];
+                    //clear any prior results
+                    d3.select(svg).selectAll(".cluster").each(function(d, i) {
+                        d3.select(this).remove();
+                    });
+                    $("#clusterlegend-" + id).html(buildClusterLegend(0));
+                    if (text != "None") {
+                        var project = "{{ project }}";
+                        showCluster(project, $("#" + clusterid).val(), id, true);
+                    }
                 }
             });
         });
@@ -402,13 +491,19 @@
                         {% if entry.clusterfiles|length > 0 %}
 
                             <div class="d-flex justify-content-start">
+                                <div class="form-group form-check" style="margin-right: 5px;">
+                                    <button type="button" class="btn btn-outline-primary btn-sm addclusterboxes text-nowrap" id="clusterbtn-{{ entry.uniquesvg }}" >Apply to Labels</button>
+                                    <!--<input type="checkbox" class="form-check-input" id="checkclusterboxes">
+                                    <label class="form-check-label" for="checkclusterboxes">Textboxes</label>-->
+                                </div>
                                 <label for="cluster-{{ entry.uniquesvg }}">Cluster:&nbsp;</label>
                                 <select id="cluster-{{ entry.uniquesvg }}" class="cluster-select form-control form-control-sm" autocomplete="off">
                                         <option value="None" selected="selected">None</option>
                                     {% for cluster in entry.clusterfiles %}
                                         <option value="{{ cluster.file }}">{{ cluster.name }}</option>
                                     {% endfor %}
-                                </select>&nbsp;<div id="clusterlegend-{{ entry.uniquesvg }}" class="d-flex align-content-stretch flex-wrap" style="font-size: 14px; max-width: 270px; min-width: 220px;"></div>&nbsp;|&nbsp;
+                                </select>&nbsp;
+                                <div id="clusterlegend-{{ entry.uniquesvg }}" class="d-flex align-content-stretch flex-wrap" style="font-size: 14px; max-width: 270px; min-width: 220px;"></div>&nbsp;|&nbsp;
                                 <a style="white-space: nowrap;" href="#" onclick="showhideColorRange('color-{{ entry.uniquesvg }}', this); return false;" class="seqcolor">Show color range</a>&nbsp;<div><button type="button" class="btn btn-outline-primary btn-sm save disabled" id="save-{{ entry.uniquesvg }}" disabled>Save</button></div>
                             </div>
                         {% else %}
