Removed Olive, Navy, and Maroon

--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -128,13 +128,13 @@
         <input type="hidden" id="project" value="{{ project }}" />
         <div id="context-menu">
             <div id="boxred" class="item"><span class="rectangle Red"></span>&nbsp;&nbsp;Red</div>
-            <div id="boxolive" class="item"><span class="rectangle Olive"></span>&nbsp;&nbsp;Olive</div>
+            <!-- <div id="boxolive" class="item"><span class="rectangle Olive"></span>&nbsp;&nbsp;Olive</div> -->
             <div id="boxneonblue"  class="item"><span class="rectangle Neonblue"></span>&nbsp;&nbsp;Neon Blue</div>
             <div id="boxgreen"  class="item"><span class="rectangle Green"></span>&nbsp;&nbsp;Green</div>
             <div id="boxlavender"  class="item"><span class="rectangle Lavender"></span>&nbsp;&nbsp;Lavender</div>
-            <div id="boxmaroon"  class="item"><span class="rectangle Maroon"></span>&nbsp;&nbsp;Maroon</div>
+            <!--  <div id="boxmaroon"  class="item"><span class="rectangle Maroon"></span>&nbsp;&nbsp;Maroon</div> -->
             <div id="boxorange"  class="item"><span class="rectangle Orange"></span>&nbsp;&nbsp;Orange</div>
-            <div id="boxnavy"  class="item"><span class="rectangle Navy"></span>&nbsp;&nbsp;Navy</div>
+            <!--  <div id="boxnavy"  class="item"><span class="rectangle Navy"></span>&nbsp;&nbsp;Navy</div> -->
             <div id="boxlightblue"  class="item"><span class="rectangle Lightblue"></span>&nbsp;&nbsp;Light Blue</div>
             <div id="boxblack"  class="item"><span class="rectangle Black"></span>&nbsp;&nbsp;Black</div>
             <div id="boxlime"  class="item"><span class="rectangle Lime"></span>&nbsp;&nbsp;Lime</div>
@@ -148,13 +148,13 @@
         </div>
         <div id="context-menu-circle">
             <div id="circlered" class="item"><span class="dot Red"></span>&nbsp;&nbsp;Red</div>
-            <div id="circleolive" class="item"><span class="dot Olive"></span>&nbsp;&nbsp;Olive</div>
+            <!-- <div id="circleolive" class="item"><span class="dot Olive"></span>&nbsp;&nbsp;Olive</div> -->
             <div id="circleneonblue"  class="item"><span class="dot Neonblue"></span>&nbsp;&nbsp;Neon Blue</div>
             <div id="circlegreen"  class="item"><span class="dot Green"></span>&nbsp;&nbsp;Green</div>
             <div id="circlelavender"  class="item"><span class="dot Lavender"></span>&nbsp;&nbsp;Lavender</div>
-            <div id="circlemaroon"  class="item"><span class="dot Maroon"></span>&nbsp;&nbsp;Maroon</div>
+            <!-- <div id="circlemaroon"  class="item"><span class="dot Maroon"></span>&nbsp;&nbsp;Maroon</div> -->
             <div id="circleorange"  class="item"><span class="dot Orange"></span>&nbsp;&nbsp;Orange</div>
-            <div id="circlenavy"  class="item"><span class="dot Navy"></span>&nbsp;&nbsp;Navy</div>
+            <!-- <div id="circlenavy"  class="item"><span class="dot Navy"></span>&nbsp;&nbsp;Navy</div> -->
             <div id="circlelightblue"  class="item"><span class="dot Lightblue"></span>&nbsp;&nbsp;Light Blue</div>
             <div id="circleblack"  class="item"><span class="dot Black"></span>&nbsp;&nbsp;Black</div>
             <div id="circlelime"  class="item"><span class="dot Lime"></span>&nbsp;&nbsp;Lime</div>
@@ -188,14 +188,14 @@
                                 <input type="hidden" id="seqsred" value="" />
                               </div>
 
-                              <div>
+                              <!-- <div>
                                 <input type="radio" id="extractolive" name="color" value="extractolive">
                                 <label for="extractolive">
                                   <span>
                                   </span>
                                 </label>
                                 <input type="hidden" id="seqsolive" value="" />
-                              </div>
+                              </div> -->
 
                               <div>
                                 <input type="radio" id="extractneonblue" name="color" value="extractneonblue">
@@ -224,14 +224,14 @@
                                   <input type="hidden" id="seqslavender" value="" />
                               </div>
 
-                              <div>
+                              <!-- <div>
                                 <input type="radio" id="extractmaroon" name="color" value="extractmaroon">
                                 <label for="extractmaroon">
                                   <span>
                                   </span>
                                 </label>
                                   <input type="hidden" id="seqsmaroon" value="" />
-                              </div>
+                              </div> -->
 
                               <div>
                                 <input type="radio" id="extractorange" name="color" value="extractorange">
@@ -242,14 +242,14 @@
                                   <input type="hidden" id="seqsorange" value="" />
                               </div>
 
-                              <div>
+                              <!-- <div>
                                 <input type="radio" id="extractnavy" name="color" value="extractnavy">
                                 <label for="extractnavy">
                                   <span>
                                   </span>
                                 </label>
                                   <input type="hidden" id="seqsnavy" value="" />
-                              </div>
+                              </div> -->
 
                               <div>
                                 <input type="radio" id="extractlightblue" name="color" value="extractlightblue">
