Changed colors on sliders to Red to Green

--- a/phylobook/static/css/phylobook.css
+++ b/phylobook/static/css/phylobook.css
@@ -213,7 +213,9 @@ img {
 }
 
 .slider-range {
-    background-image: linear-gradient(to right, yellow , red);
+    /* background-image: linear-gradient(to right, yellow , red); */
+    /* background-image: linear-gradient(to right, yellow , blue); */
+    background-image: linear-gradient(to right, #FF0000 , #00FF00);
     width: 300px;
     display: inline-block;
     margin-left: 10px;
@@ -388,5 +390,5 @@ img {
 }
 
 .projectlink {
-    color: #0000ff
+    color: #0000ff;
 }
